force-app/main/default/objects/LMS_Notification_Event__e/LMS_Notification_Event__e.object-meta.xml
<CustomObject>
    <label>LMS Notification Event</label>
    <pluralLabel>LMS Notification Events</pluralLabel>
</CustomObject>