force-app/main/default/objects/LMS_Notification_Event__e/fields/LMS_Message__c.field-meta.xml
<CustomField>
    <fullName>LMS_Message__c</fullName>
    <label>LMS Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>