force-app/main/default/objects/LMS_Notification_Event__e/fields/LMS_Recipient_Id__c.field-meta.xml
<CustomField>
    <fullName>LMS_Recipient_Id__c</fullName>
    <label>LMS Recipient Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>