force-app/main/default/objects/LMS_Notification_Event__e/fields/LMS_Severity__c.field-meta.xml
<CustomField>
    <fullName>LMS_Severity__c</fullName>
    <label>LMS Severity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>