force-app/main/default/objects/LMS_Notification_Event__e/fields/LMS_Title__c.field-meta.xml
<CustomField>
    <fullName>LMS_Title__c</fullName>
    <label>LMS Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>