force-app/main/default/objects/LMS_Notification_Event__e/fields/LMS_Type__c.field-meta.xml
<CustomField>
    <fullName>LMS_Type__c</fullName>
    <label>LMS Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>